
ChangeLog
 [ + added, - removed, * changed ]
 * 06Jul2021 Fixes calloc() behaviour (closes #60)
 * 06Jul2021 Fixes realloc comment in mpi2prv (closes #59)
 * 06Jul2021 Fix for missing symbols of libraries loaded dynamically (closes #58) 
 * 26Jan2021 Checks if EXTRAE_PY_CEVENTS is not empty before checking its value
 * 21Ago2020 Fixes bug instrumenting user code inside OpenMP
 * 19Ago2020 Fixes wrong exit event in cudaFree and cudaMemset
 * 12Ago2020 Modifications to support CUDA10
 + 14Jul2020 Adds missing wrappers/CUPTI and a catch-all for CUPTI uninstrumented routines
 * 25Jun2020 Changes call to MPI_Barrier into PMPI_Barrier
 * 23Jun2020 Fixes wrong JAVAH definition and conditional check
 * 23Jun2020 Fixes for dyninst make check tests and configure checks for libsynapse
 * 23Jun2020 Forces exit on second termination signal
 * 22Jun2020 Changes to use new binutils >= 2.34 API
 * 22Jun2020 Changes merger block distribution to avoid processes with 0 traces
 * 22Jun2020 Fixes checks for `javah` to compile Extrae with JDK > 9
 * 19Jun2020 Updates common.h to meet C++11 syntax
 * 12Jun2020 Solves duplicate capture of C and Fortran MPI calls when using Intel implementations
 * 08Jun2020 Fixes finalization issues when Extrae is initialized by API and another runtime
 * 26May2020 Adds option to instrument I/O internals
 + 25May2020 Fixes race condition in pthread instrumentation and adds wrappers for pthread_cond_signal, pthread_cond_broadcast, pthread_cond_wait, pthread_cond_timedwait
 * 29Apr2020 Fixes local to world rank translations for comms going thru an intercommunicator created with MPI_Intercomm_create
 + 29Apr2020 Adds environment variable EXTRAE_ENFORCE_FS_SYNC to ensure file system synchronization after creating trace files and folders
 * 17Mar2020 Changes for Workflows and Distributed Computing group
 + 13Mar2020 Added instrumentation for MPI_Comm_dup_with_info