@@ -5,6 +5,7 @@ ChangeLog
  * 06Jul2021 Fixes realloc comment in mpi2prv (closes #59)
  * 06Jul2021 Fix for missing symbols of libraries loaded dynamically (closes #58) 
  * 26Jan2021 Checks if EXTRAE_PY_CEVENTS is not empty before checking its value
+ + 29Sep2020 Adds configure option to disable instrumentation of pthread_cond_* calls
  * 21Ago2020 Fixes bug instrumenting user code inside OpenMP
  * 19Ago2020 Fixes wrong exit event in cudaFree and cudaMemset
  * 12Ago2020 Modifications to support CUDA10
